--- a/deploy/vagrant/vbox/Vagrantfile
+++ b/deploy/vagrant/vbox/Vagrantfile
@@ -7,6 +7,8 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "bento/centos-7.1"
   config.vm.synced_folder "..", "/vagrant" # the parent folder is where we do the real deployment.
+  config.vm.synced_folder "../../../", "/alluxio" #sync local alluxio to VM, added By Nelson 
+  config.vm.synced_folder "../../../../AlluxioBasicIOTest", "/AlluxioBasicIOTest" #added by Nelson
   config.vm.provision "ansible" do |ans|
     ans.playbook = "../provision/playbook-basic.yml"
   end
