Finish implementation, can run my benchmark on VMs

--- a/core/common/src/main/resources/alluxio-default.properties
+++ b/core/common/src/main/resources/alluxio-default.properties
@@ -108,6 +108,13 @@ alluxio.worker.data.server.class=alluxio.worker.netty.NettyDataServer
 alluxio.worker.evictor.class=alluxio.worker.block.evictor.LRUEvictor
 alluxio.worker.evictor.lrfu.attenuation.factor=2.0
 alluxio.worker.evictor.lrfu.step.factor=0.25
+# true to enable remote worker eviction for blocks in Alluxio storage
+alluxio.worker.evictor.remote.evict.in.mem.blocks=true
+# true to move persisted blocks from disk with background process
+alluxio.worker.evictor.remote.evict.persist.blocks.background=true
+# threshold(%) of remote worker memory utilization
+# only allow remote worker eviction if the utilization is below this value
+alluxio.worker.evictor.remote.evict.space.threshold=100
 alluxio.worker.file.persist.pool.size=2
 alluxio.worker.filesystem.heartbeat.interval.ms=1000
 alluxio.worker.memory.size=128MB
