--- a/conf/alluxio-site.properties
+++ b/conf/alluxio-site.properties
@@ -1,10 +1,10 @@
 # Settings for peer worker eviction
 
 # true to enable remote worker eviction for blocks in Alluxio storage
-alluxio.worker.evictor.remote.evict.in.mem.blocks=true
+alluxio.worker.evictor.remote.evict.in.mem.blocks=false
 
 # true to move persisted blocks from disk with background process
-alluxio.worker.evictor.remote.evict.persist.blocks.background=true
+alluxio.worker.evictor.remote.evict.persist.blocks.background=false
 
 # threshold(%) of remote worker memory utilization
 # only allow remote worker eviction if the utilization is below this value
