--- a/conf/alluxio-site.properties
+++ b/conf/alluxio-site.properties
@@ -10,4 +10,8 @@ alluxio.worker.evictor.remote.evict.persist.blocks.background=false
 # only allow remote worker eviction if the utilization is below this value
 alluxio.worker.evictor.remote.evict.space.threshold=100
 
+# time threshold. Block accessed farther than this value(ms) ago will not be moved
+# to remote worker
+alluxio.worker.evictor.remote.evict.unused.time.threshold=0
+
 alluxio.user.network.netty.timeout.ms=300000
