--- a/core/common/src/main/resources/alluxio-default.properties
+++ b/core/common/src/main/resources/alluxio-default.properties
@@ -115,9 +115,11 @@ alluxio.worker.evictor.remote.evict.persist.blocks.background=true
 # threshold(%) of remote worker memory utilization
 # only allow remote worker eviction if the utilization is below this value
 alluxio.worker.evictor.remote.evict.space.threshold=100
-# time threshold. Block accessed farther than this value(ms) ago will not be moved
+# time threshold. Block accessed farther than this value(sec) ago will not be moved
 # to remote worker
 alluxio.worker.evictor.remote.evict.unused.time.threshold=10000
+# number of least significant blocks to calculate the avg last access time
+alluxio.worker.evictor.remote.evict.num.least.significant.block=3
 alluxio.worker.file.persist.pool.size=2
 alluxio.worker.filesystem.heartbeat.interval.ms=1000
 alluxio.worker.memory.size=128MB
