make gobal LRU configurable

--- a/core/common/src/main/resources/alluxio-default.properties
+++ b/core/common/src/main/resources/alluxio-default.properties
@@ -120,6 +120,8 @@ alluxio.worker.evictor.remote.evict.space.threshold=100
 alluxio.worker.evictor.remote.evict.unused.time.threshold=10000
 # number of least significant blocks to calculate the avg last access time
 alluxio.worker.evictor.remote.evict.num.least.significant.block=3
+# insert moved block to the correct position in the remote LRU queue
+alluxio.worker.evictor.remote.evict.global.lru=true
 alluxio.worker.file.persist.pool.size=2
 alluxio.worker.filesystem.heartbeat.interval.ms=1000
 alluxio.worker.memory.size=128MB
