--- a/deploy/vagrant/provision/playbook-basic.yml
+++ b/deploy/vagrant/provision/playbook-basic.yml
@@ -5,7 +5,7 @@
 - name: install necessary packages
   hosts: all
   tasks:
-    # changed by Nelson
+    # changed by Chi-fan Chu
     - include: roles/common/tasks/pkg.yml
     - include: roles/lib/tasks/maven.yml
     - include: roles/lib/tasks/client_lib.yml
